# sqlseed

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  architecture.zh-CN.md  evaluation.md
docs/superpowers/plans/: 2026-04-17-orchestrator-further-refactor.md  2026-04-17-sqlseed-comprehensive-improvement.md
docs/superpowers/specs/: 2026-04-17-orchestrator-further-refactor-design.md  2026-04-17-sqlseed-comprehensive-diagnosis-design.md  2026-04-18-gpt-5-4-think-design.md  2026-04-22-manual-test-docs-design.md
examples/: ai_generation_demo.py
plugins/mcp-server-sqlseed/: AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
plugins/mcp-server-sqlseed/src/mcp_server_sqlseed/: AGENTS.md  __init__.py  __main__.py  config.py  server.py
plugins/sqlseed-ai/: AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
plugins/sqlseed-ai/src/sqlseed_ai/: AGENTS.md  __init__.py  _client.py  _json_utils.py  _model_selector.py  analyzer.py  config.py  errors.py  examples.py  nl_config.py  provider.py  refiner.py  suggest.py
src/sqlseed/: AGENTS.md  __init__.py  _version.py
src/sqlseed/_utils/: AGENTS.md  __init__.py  logger.py  metrics.py  progress.py  schema_helpers.py  sql_safe.py
src/sqlseed/cli/: AGENTS.md  __init__.py  main.py
src/sqlseed/config/: AGENTS.md  __init__.py  loader.py  models.py  snapshot.py
src/sqlseed/core/: AGENTS.md  __init__.py  column_dag.py  constraints.py  enrichment.py  expression.py  mapper.py  orchestrator.py  plugin_mediator.py  relation.py  result.py  schema.py  transform.py  unique_adjuster.py
src/sqlseed/database/: AGENTS.md  __init__.py  _base_adapter.py  _compat.py  _helpers.py  _protocol.py  optimizer.py  raw_sqlite_adapter.py  sqlite_utils_adapter.py
src/sqlseed/generators/: AGENTS.md  __init__.py  _dispatch.py  _json_helpers.py  _protocol.py  _string_helpers.py  base_provider.py  faker_provider.py  mimesis_provider.py  registry.py  stream.py
src/sqlseed/plugins/: AGENTS.md  __init__.py  hookspecs.py  manager.py
tests/: AGENTS.md  _helpers.py  conftest.py  test_ai_plugin.py  test_cli.py  test_cli_yaml_priority.py  test_doc_sync.py  test_enrich_enum_detection.py  test_mapper.py  test_orchestrator.py  test_public_api.py  test_refiner.py  test_relation.py  test_result.py  test_schema.py
tests/benchmarks/: AGENTS.md  bench_fill.py
tests/test_config/: AGENTS.md  test_loader.py  test_models.py  test_snapshot.py
tests/test_core/: AGENTS.md  conftest.py  test_column_dag.py  test_constraints.py  test_enrichment.py  test_expression.py  test_plugin_mediator.py  test_transform.py  test_unique_adjuster.py
tests/test_database/: AGENTS.md  test_optimizer.py  test_raw_sqlite_adapter.py  test_sql_safe.py  test_sqlite_utils_adapter.py
tests/test_generators/: AGENTS.md  __init__.py  _mixin.py  test_base_provider.py  test_faker_provider.py  test_mimesis_provider.py  test_registry.py  test_stream.py
tests/test_plugins/: AGENTS.md  test_hookspecs.py  test_manager.py
tests/test_utils/: AGENTS.md  test_metrics.py
