[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sqlseed"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Declarative SQLite test data generation toolkit"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["sqlite", "data-generation", "testing", "database", "seed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "sqlite-utils>=3.36",
    "pydantic>=2.0",
    "pluggy>=1.3",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "typing_extensions>=4.0",
    "simpleeval>=1.0",
    "rstr>=3.2",
]

[project.optional-dependencies]
faker = ["faker>=30.0"]
mimesis = ["mimesis>=18.0"]
all = ["faker>=30.0", "mimesis>=18.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
sqlseed = "sqlseed.cli.main:cli"

[project.entry-points."sqlseed"]
faker = "sqlseed.generators.faker_provider:FakerProvider"
mimesis = "sqlseed.generators.mimesis_provider:MimesisProvider"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlseed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "TCH", "RET", "PLW", "PLC", "PLR", "RUF"]
ignore = [
    "S608", "DTZ001", "DTZ005", "BLE001", "PLR1730", "PLR2004", "PLC0415", "PLR0913", "PLR0911",
    "RUF002", "RUF003", "PLR0912", "PLR0915",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src"]

[[tool.mypy.overrides]]
module = ["mimesis.*", "faker.*", "sqlite_utils.*", "yaml", "simpleeval", "sqlseed_ai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sqlseed.generators.mimesis_provider",
    "sqlseed.generators.faker_provider",
]
disable_error_code = ["no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sqlseed --cov-report=term-missing"
