[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sqlseed"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Declarative SQLite test data generation toolkit"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    {name = "SunBo", email = "1443584939@qq.com"},
]
keywords = ["sqlite", "data-generation", "testing", "database", "seed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "sqlite-utils>=3.36",
    "pydantic>=2.0",
    "pluggy>=1.3",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "typing_extensions>=4.4",
    "simpleeval>=1.0",
    "rstr>=3.2",
]

[project.urls]
Homepage = "https://github.com/sunbos/sqlseed"
Documentation = "https://github.com/sunbos/sqlseed#readme"
Repository = "https://github.com/sunbos/sqlseed"
Issues = "https://github.com/sunbos/sqlseed/issues"

[project.optional-dependencies]
faker = ["faker>=30.0"]
mimesis = ["mimesis>=18.0"]
all = ["faker>=30.0", "mimesis>=18.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
sqlseed = "sqlseed.cli.main:cli"

[project.entry-points."sqlseed"]
faker = "sqlseed.generators.faker_provider:FakerProvider"
mimesis = "sqlseed.generators.mimesis_provider:MimesisProvider"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlseed"]

[tool.hatch.build.targets.sdist]
exclude = [
    "docs/",
    "tests/",
    "plugins/",
    "snapshots/",
    ".github/",
    ".trae/",
    ".gemini/",
    "*.db",
    "AGENTS.md",
    "CLAUDE.md",
    "GEMINI.md",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["sqlseed"]
known-third-party = ["sqlseed_ai"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "TCH", "RET", "PLW", "PLC", "PLR", "RUF"]
ignore = [
    "PLR1730", "PLR2004", "PLR0913", "PLR0911",
    "RUF002", "RUF003", "PLR0912", "PLR0915",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src", "plugins"]

[[tool.mypy.overrides]]
module = ["mimesis.*", "faker.*", "sqlite_utils.*", "yaml", "simpleeval", "sqlseed_ai.*", "mcp.*", "mcp_server_sqlseed.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sqlseed.generators.mimesis_provider",
    "sqlseed.generators.faker_provider",
]
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
