[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-sqlseed"
dynamic = ["version"]
requires-python = ">=3.10"
description = "MCP server for sqlseed - AI-powered SQLite test data generation"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    {name = "SunBo", email = "1443584939@qq.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sqlseed>=0.1.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/sunbos/sqlseed"
Repository = "https://github.com/sunbos/sqlseed/tree/main/plugins/mcp-server-sqlseed"

[project.optional-dependencies]
ai = ["sqlseed-ai"]

[project.scripts]
mcp-server-sqlseed = "mcp_server_sqlseed:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_sqlseed"]
