[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlseed-ai"
version = "0.1.0"
requires-python = ">=3.10"
description = "AI-powered data generation plugin for sqlseed"
license = "AGPL-3.0-or-later"
authors = [
    {name = "SunBo", email = "1443584939@qq.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sqlseed",
    "openai>=1.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/sunbos/sqlseed"
Repository = "https://github.com/sunbos/sqlseed/tree/main/plugins/sqlseed-ai"

[project.entry-points."sqlseed"]
ai = "sqlseed_ai:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlseed_ai"]
