[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sqlseed-ai"
dynamic = ["version"]
requires-python = ">=3.10"
description = "AI-powered data generation plugin for sqlseed"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    {name = "SunBo", email = "1443584939@qq.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sqlseed>=0.1.0,<2",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/sunbos/sqlseed"
Repository = "https://github.com/sunbos/sqlseed/tree/main/plugins/sqlseed-ai"

[project.entry-points."sqlseed"]
ai = "sqlseed_ai:plugin"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["src/sqlseed_ai"]
